# chunk-norris

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
examples/: basic_usage.py
examples/sample_data/: document.txt  questions.json
src/chunk_norris/: __init__.py  norris.py  question_gen.py
src/chunk_norris/chunkers/: base.py  fixed.py  paragraph.py  recursive.py  sentence.py
src/chunk_norris/embeddings/: base.py  bert.py
src/chunk_norris/evaluator/: metrics.py  pipeline.py  report.py  retriever.py
src/chunk_norris/llm/: base.py  openai_llm.py
src/chunk_norris/retrieval/: base.py  bm25.py  dense.py  hybrid.py
tests/: test_norris.py  test_question_gen.py
tests/chunkers/: test_base.py  test_fixed.py  test_paragraph.py  test_recursive.py  test_sentence.py
tests/evaluator/: test_report.py  test_retriever.py
tests/retrieval/: test_base.py  test_bm25.py  test_dense.py  test_hybrid.py
